tests/fixtures/type_checker/error/bitwise.galaxy
void test_bitwise()
{
    int val_int;

    if (val_int & false) {}
    // ^ERR
    if (val_int & 0x01) {}
    if (val_int << 1) {}

    val_int <<= 1;
    val_int = val_int << 1;
    val_int = 1 >> val_int;
    val_int = ~(1 ^ 1);
}
